--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "8.0.5",
+    "redux": "4.2.1",
+    "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "2.4.2",
     "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
