--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-VITE_SERVER='http://localhost:5001'
+VITE_SERVER=SERVER_URL
+VITE_API_KEY=YOUR_API_KEY
+VITE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN
+VITE_PROJECT_ID=YOUR_PROJECT_ID
+VITE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET
+VITE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID
+VITE_APP_ID=YOUR_APP_ID
