--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "socket.io-client": "^4.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.27",
@@ -35,6 +38,7 @@
     "babel-jest": "^29.4.3",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
