--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "firebase": "^9.17.1",
+    "joi": "^17.8.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-redux": "8.0.5",
     "react-router-dom": "6.8.2",
     "redux": "4.2.1",
