--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "dayjs": "^1.11.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.6.0",
@@ -22,6 +23,7 @@
     "next": "13.2.4",
     "prettier": "^2.8.4",
     "react": "18.2.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-redux": "8.0.5",
