--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint-plugin-react": "^7.32.2",
     "firebase": "^9.17.1",
     "joi": "^17.8.3",
-    "next": "13.2.4",
+    "next": "^13.4.1",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
